<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Options">

    <Button
        android:id="@+id/button_5"
        android:layout_width="374dp"
        android:layout_height="84dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        android:text="@string/colourSettings"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="374dp"
        android:layout_height="84dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        android:text="@string/brightnessSettings"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="374dp"
        android:layout_height="84dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        android:text="@string/zoomSettings"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="374dp"
        android:layout_height="84dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        android:text="@string/prototype"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="374dp"
        android:layout_height="84dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        android:text="@string/prototype"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />
</android.support.constraint.ConstraintLayout>