<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="530dp"
    android:background="@color/grey"
    android:padding="5dp"
    android:layout_gravity="center">

        <TextView
            android:id="@+id/popup_title"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:background="@color/grey"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/popup_play"
            android:layout_width="310dp"
            android:layout_height="84dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:background="@color/black"
            android:text="@string/open"
            android:textColor="@color/yellow"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_title" />

        <Button
            android:id="@+id/popup_playlist"
            android:layout_width="310dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="4dp"
            android:background="@color/black"
            android:text="@string/addToPlaylist"
            android:textColor="@color/yellow"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_play" />

        <Button
            android:id="@+id/popup_details"
            android:layout_width="310dp"
            android:layout_height="84dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="4dp"
            android:background="@color/black"
            android:text="@string/details"
            android:textColor="@color/yellow"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_playlist" />

</android.support.constraint.ConstraintLayout>