<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".AudioPlayer">

    <TextView
        android:id="@+id/player_title"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="345dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/playPause"
        android:textColor="#ffff00"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_seek" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="345dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/stop"
        android:textColor="#ffff00"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button"
        android:contentDescription="@string/stop" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="345dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/restart"
        android:textColor="#ffff00"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_button"
        android:contentDescription="@string/restart" />

    <SeekBar
        android:id="@+id/progress_seek"
        android:layout_width="360dp"
        android:layout_height="57dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:progressDrawable="@drawable/custom_progress"
        android:thumb="@drawable/custom_thumb"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_title" />

    <SeekBar
        android:id="@+id/volume_seek"
        android:layout_width="360dp"
        android:layout_height="57dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:progressDrawable="@drawable/custom_progress"
        android:thumb="@drawable/custom_thumb"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart_button" />




</android.support.constraint.ConstraintLayout>